--- a/ArrayPractice/Base.lproj/Main.storyboard
+++ b/ArrayPractice/Base.lproj/Main.storyboard
@@ -160,6 +160,21 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KcK-QG-dH7">
+                                <rect key="frame" x="40" y="660" width="334" height="36"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="334" id="Fta-pM-Ijo"/>
+                                    <constraint firstAttribute="height" constant="36" id="okO-8U-8PZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="言葉を足す">
+                                    <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="addWords:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rd4-JK-ZJE"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -176,29 +191,161 @@
                             <constraint firstItem="iDn-9R-23V" firstAttribute="top" secondItem="9yQ-TU-xYk" secondAttribute="bottom" constant="40" id="RHg-5S-pNE"/>
                             <constraint firstItem="cie-pM-9HL" firstAttribute="top" secondItem="Vfi-SG-H5z" secondAttribute="bottom" constant="40" id="VU6-tV-CAe"/>
                             <constraint firstItem="9yQ-TU-xYk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="aoW-Ds-3J4"/>
+                            <constraint firstItem="KcK-QG-dH7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="cXJ-N3-8IE"/>
                             <constraint firstItem="yBq-sn-Cas" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="cii-e0-TBP"/>
                             <constraint firstItem="9yQ-TU-xYk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="hky-p9-mIJ"/>
                             <constraint firstItem="rwq-SV-YQB" firstAttribute="top" secondItem="OSD-nc-dip" secondAttribute="bottom" constant="40" id="ljQ-9P-5yz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KcK-QG-dH7" secondAttribute="trailing" constant="40" id="pdf-hT-8U3"/>
                             <constraint firstItem="iDn-9R-23V" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="piG-mZ-xUT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OSD-nc-dip" secondAttribute="trailing" constant="40" id="qQe-de-h1u"/>
                             <constraint firstItem="yBq-sn-Cas" firstAttribute="top" secondItem="Vin-h9-VON" secondAttribute="bottom" constant="40" id="rGu-6T-UXS"/>
                             <constraint firstItem="Vfi-SG-H5z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="rNT-el-VgZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LUo-uR-Iq4" secondAttribute="trailing" constant="40" id="rUn-xx-pA4"/>
                             <constraint firstItem="Vin-h9-VON" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="vmQ-pq-e9e"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KcK-QG-dH7" secondAttribute="bottom" constant="40" id="wYN-xn-lAB"/>
                             <constraint firstItem="7CZ-YT-scZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="yVE-b1-WW1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="rp2-Bh-HNl"/>
                     <connections>
                         <outlet property="whatLabel" destination="LUo-uR-Iq4" id="So1-Mg-05w"/>
                         <outlet property="whenLabel" destination="7CZ-YT-scZ" id="Do4-45-eWX"/>
                         <outlet property="whereLabel" destination="OSD-nc-dip" id="zrZ-AO-6Yv"/>
                         <outlet property="whoLabel" destination="rwq-SV-YQB" id="0lM-wA-243"/>
+                        <segue destination="Yr0-pc-2oa" kind="presentation" identifier="addWordsSegue" id="Vqj-Qs-5bd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-42.028985507246382" y="77.445652173913047"/>
+        </scene>
+        <!--Words View Controller-->
+        <scene sceneID="f4e-N1-yY9">
+            <objects>
+                <viewController id="Yr0-pc-2oa" customClass="WordsViewController" customModule="ArrayPractice" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BAq-rm-ogT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリーを選んでね" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNK-zV-40N">
+                                <rect key="frame" x="120" y="359" width="174" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v3m-qO-0le">
+                                <rect key="frame" x="120" y="251" width="174" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3y-BU-g9K">
+                                <rect key="frame" x="142" y="402" width="130" height="36"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="4uI-U2-Si0"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="8Dj-hF-W7U"/>
+                                    <constraint firstAttribute="height" constant="36" id="eLR-bR-9E4"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="iab-Dp-szV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="いつ">
+                                    <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="chooseWhen:" destination="Yr0-pc-2oa" eventType="touchUpInside" id="PmC-8v-wYF"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3kj-fP-tdE">
+                                <rect key="frame" x="142" y="520" width="130" height="36"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="Ahf-aJ-iHb"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="fEA-e1-HCD"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="h6h-Kr-MWy"/>
+                                    <constraint firstAttribute="width" constant="130" id="kTo-pN-5A3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="だれが">
+                                    <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="chooseWho:" destination="Yr0-pc-2oa" eventType="touchUpInside" id="fRB-0F-Gje"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cil-cL-4ER">
+                                <rect key="frame" x="142" y="461" width="130" height="36"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="a63-JU-DAZ"/>
+                                    <constraint firstAttribute="height" constant="36" id="brW-Jt-niv"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="e2K-PO-xXX"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="eOZ-n4-Wdj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="どこで">
+                                    <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="chooseWhere:" destination="Yr0-pc-2oa" eventType="touchUpInside" id="jJD-Bu-bU3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfl-0G-SvJ">
+                                <rect key="frame" x="142" y="579" width="130" height="36"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="OYU-Y9-kPx"/>
+                                    <constraint firstAttribute="height" constant="36" id="SMq-6m-9vj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="どうした">
+                                    <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="chooseWhat:" destination="Yr0-pc-2oa" eventType="touchUpInside" id="oYA-gL-fu9"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="言葉を入れてね" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ay-kt-2It">
+                                <rect key="frame" x="146" y="209" width="122" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="sRC-oU-26e" firstAttribute="trailing" secondItem="Cil-cL-4ER" secondAttribute="trailing" constant="142" id="3Tq-mW-Lqh"/>
+                            <constraint firstItem="Cil-cL-4ER" firstAttribute="top" secondItem="h3y-BU-g9K" secondAttribute="bottom" constant="23" id="824-CJ-agv"/>
+                            <constraint firstItem="3kj-fP-tdE" firstAttribute="centerX" secondItem="BAq-rm-ogT" secondAttribute="centerX" id="8DI-LQ-Pye"/>
+                            <constraint firstItem="gNK-zV-40N" firstAttribute="top" secondItem="v3m-qO-0le" secondAttribute="bottom" constant="74" id="8Ku-OK-4bB"/>
+                            <constraint firstItem="dfl-0G-SvJ" firstAttribute="centerX" secondItem="BAq-rm-ogT" secondAttribute="centerX" id="EZg-8P-KTd"/>
+                            <constraint firstItem="3kj-fP-tdE" firstAttribute="leading" secondItem="sRC-oU-26e" secondAttribute="leading" constant="142" id="H1i-0T-Apf"/>
+                            <constraint firstItem="sRC-oU-26e" firstAttribute="trailing" secondItem="gNK-zV-40N" secondAttribute="trailing" constant="120" id="H8z-7J-ggQ"/>
+                            <constraint firstItem="sRC-oU-26e" firstAttribute="trailing" secondItem="v3m-qO-0le" secondAttribute="trailing" constant="120" id="K7R-Qh-QSD"/>
+                            <constraint firstItem="Cil-cL-4ER" firstAttribute="centerX" secondItem="BAq-rm-ogT" secondAttribute="centerX" id="LAj-WJ-aPH"/>
+                            <constraint firstItem="3kj-fP-tdE" firstAttribute="top" secondItem="Cil-cL-4ER" secondAttribute="bottom" constant="23" id="LEf-DY-YkX"/>
+                            <constraint firstItem="sRC-oU-26e" firstAttribute="trailing" secondItem="h3y-BU-g9K" secondAttribute="trailing" constant="142" id="QWg-a9-Kno"/>
+                            <constraint firstItem="sRC-oU-26e" firstAttribute="bottom" secondItem="dfl-0G-SvJ" secondAttribute="bottom" constant="101" id="Xff-yN-v3M"/>
+                            <constraint firstItem="h3y-BU-g9K" firstAttribute="top" secondItem="gNK-zV-40N" secondAttribute="bottom" constant="22" id="Ypd-6g-YiL"/>
+                            <constraint firstItem="Cil-cL-4ER" firstAttribute="leading" secondItem="sRC-oU-26e" secondAttribute="leading" constant="142" id="aGt-t1-Wxg"/>
+                            <constraint firstItem="v3m-qO-0le" firstAttribute="leading" secondItem="sRC-oU-26e" secondAttribute="leading" constant="120" id="jVI-NP-ASZ"/>
+                            <constraint firstItem="dfl-0G-SvJ" firstAttribute="leading" secondItem="sRC-oU-26e" secondAttribute="leading" constant="142" id="mqx-Zs-S2J"/>
+                            <constraint firstItem="gNK-zV-40N" firstAttribute="leading" secondItem="sRC-oU-26e" secondAttribute="leading" constant="120" id="nfb-n4-Eoe"/>
+                            <constraint firstItem="h3y-BU-g9K" firstAttribute="centerX" secondItem="BAq-rm-ogT" secondAttribute="centerX" id="oF4-mh-YeP"/>
+                            <constraint firstItem="h3y-BU-g9K" firstAttribute="leading" secondItem="sRC-oU-26e" secondAttribute="leading" constant="142" id="pKr-Yq-2E8"/>
+                            <constraint firstItem="sRC-oU-26e" firstAttribute="trailing" secondItem="3kj-fP-tdE" secondAttribute="trailing" constant="142" id="qhf-6P-Ne1"/>
+                            <constraint firstItem="dfl-0G-SvJ" firstAttribute="top" secondItem="3kj-fP-tdE" secondAttribute="bottom" constant="23" id="tfs-GQ-YgA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="sRC-oU-26e"/>
+                    </view>
+                    <connections>
+                        <outlet property="wordTextField" destination="v3m-qO-0le" id="9Mn-FL-Yh3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WLY-zT-PqJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="840.57971014492762" y="76.630434782608702"/>
         </scene>
     </scenes>
 </document>
